# bbc-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_compiler  compiler  functions.c  functions.s  input.txt  lex.yy.c  main.c  output.s  pepe.c  pepe.s  prelexer.l  preparser.tab.c  preparser.tab.h  preparser.y  script
binarytree/: Tree.c  Tree.h  binarytree.c  binarytree.h  binarytree.h.gch  enum.h  exe  main.c
include/: assemblyCodeGenerator.h  node.h  quadruple.h  quadrupleLinkedList.h  symbolList.h  symbolTable.h  tag.h  threeAddressGenerator.h  tree.h  type.h  typeChecker.h
inputs/: 1-exampleTheoretic.ctds  5-exampleCarlosLucasMatiGroup.ctds  6-fibonacciSequence.ctds  input.ctds  input.txt  input2.ctds  input2.txt  input3.ctds  input3.txt  input4.ctds  input4.txt  input5.ctds  input5.txt
parser/: lexer.l  parser.y  prelexer.l  preparser.y
scripts/: run_paser_tests.sh
src/assemblycodegenerator/: assemblyCodeGenerator.c
src/node/: node.c
src/parser/: parser.y
src/quadruple/: quadruple.c
src/quadrupleLinkedList/: quadrupleLinkedList.c
src/scanner/: lexer.l
src/symbollist/: symbolList.c
src/symboltable/: main2.c  symbolTable.c
src/threeaddresscodegenerator/: threeAddressGenerator.c
src/tree/: tree.c
src/utils/: typeChecker.c
symboltable/: SymbolTable.c  SymbolTable.h  main.c  scriptST.sh
